@@ -116,6 +116,18 @@ class Coupon(models.Model):
             "value": self.discount.value,
             "is_percentage": self.discount.is_percentage
         }
+    
+    def get_discounted_value(self, initial_value):
+        discount = self.get_discount()
+
+        if discount['is_percentage']:
+            new_price = initial_value - ((initial_value * discount['value']) / 100)
+            new_price = new_price if new_price >= 0.0 else 0.0
+        else:
+            new_price = initial_value - discount['value']
+            new_price = new_price if new_price >= 0.0 else 0.0
+
+        return new_price
 
     def save(self, *args, **kwargs):
         if not self.id:
